--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,14 @@ platform:
 - x64
 - x86
 
+init:
+- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
+build: off
+
+on_finish:
+- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 install:
 - ps: Install-Product node $env:node_js $env:platform
 - appveyor-retry call sh script/ci/install.sh
